5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1807_2572.log
== TEST (2019-06-11 17:22:13) 
-- CODE:
from numpy import *
vet1=array(eval(input('Digite: ')))
resultado=0
for i in vet1:
	if(i % != 0):
		resultado = resultado +1 
q=zeros(resultado, dtype=int)	
j=0
for i in vet1:
	if(i % != 0):
		resultado[i] = i ,
		j=j+1
print(q)

	
		
	


-- ERROR:
File "XXXX", line 5
    if(i % != 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:22:43) 
-- CODE:
from numpy import *
vet1=array(eval(input('Digite: ')))
resultado=0
for i in vet1:
	if(i %2 !=0 ):
		resultado = resultado +1 
q=zeros(resultado, dtype=int)	
j=0
for i in vet1:
	if(i %2 != 0):
		resultado[i] = i ,
		j=j+1
print(q)

	
		
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:23:28) 
-- CODE:
from numpy import *
vet1=array(eval(input('Digite: ')))
resultado=0
for i in vet1:
	if(i %2 !=0 ):
		resultado = resultado +1 
q=zeros(resultado, dtype=int)	
j=0
for i in vet1:
	if(i %2 != 0):
		vet1[i] = i ,
		j=j+1
print(q)

	
		
	


-- EXECUTION TIME:
1.00052
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2572/main.py", line 11, in <module>
    vet1[i] = i ,
IndexError: index 75247561 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:23:44) 
-- CODE:
from numpy import *
vet1=array(eval(input('Digite: ')))
resultado=0
for i in vet1:
	if(i %2 !=0 ):
		resultado = resultado +1 
q=zeros(resultado, dtype=int)	
j=0
for i in vet1:
	if(i %2 != 0):
		vet1[i] = i ,
		j=j+1
print(q)

	
		
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:24:09) 
-- CODE:
from numpy import *
vet1=array(eval(input('Digite: ')))
resultado=0
for i in vet1:
	if(i %2 !=0 ):
		resultado = resultado +1 
q=zeros(resultado, dtype=int)	
j=0
for i in vet1:
	if(i %2 != 0):
		vet1[i] = i 
		j=j+1
print(q)

	
		
	


-- EXECUTION TIME:
0.948088
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2572/main.py", line 11, in <module>
    vet1[i] = i 
IndexError: index 75247561 is out of bounds for axis 0 with size 5

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:24:12) 
-- CODE:
from numpy import *
vet1=array(eval(input('Digite: ')))
resultado=0
for i in vet1:
	if(i %2 !=0 ):
		resultado = resultado +1 
q=zeros(resultado, dtype=int)	
j=0
for i in vet1:
	if(i %2 != 0):
		vet1[i] = i 
		j=j+1
print(q)

	
		
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:24:45) 
-- CODE:
from numpy import *
vet1=array(eval(input('Digite: ')))
resultado=0
for i in vet1:
	if(i %2 !=0 ):
		resultado = resultado +1 
q=zeros(resultado, dtype=int)	
j=0
for i in vet1:
	if(i %2 != 0):
		q[i] = i 
		j=j+1
print(q)

	
		
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:25:20) 
-- CODE:
from numpy import *
vet1=array(eval(input('Digite: ')))
resultado=0
for i in vet1:
	if(i %2 !=0 ):
		resultado = resultado +1 
q=zeros(resultado, dtype=int)	
j=0
for i in vet1:
	if(i %2 != 0):
		q[j] = i 
		j=j+1
print(q)

	
		
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:25:33) 
-- CODE:
from numpy import *
vet1=array(eval(input('Digite: ')))
resultado=0
for i in vet1:
	if(i %2 !=0 ):
		resultado = resultado +1 
q=zeros(resultado, dtype=int)	
j=0
for i in vet1:
	if(i %2 != 0):
		q[j] = i 
		j=j+1
print(q)

	
		
	


-- EXECUTION TIME:
1.06276
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:45:02) 
-- CODE:

from numpy import *
matriculas=array(eval(input("aa")))
qdt_impares=0
for i in matriculas:
	if(i %2 != 0):
		qdt_impares=qtd_impares+1

	
		
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:45:03) 
-- CODE:

from numpy import *
matriculas=array(eval(input("aa")))
qdt_impares=0
for i in matriculas:
	if(i %2 != 0):
		qdt_impares=qtd_impares+1

	
		
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:46:35) 
-- CODE:

from numpy import *
matriculas=array(eval(input("aa")))
qdt_impares=
for i in matriculas:
	if(i %2 != 0):
		qdt_impares=qtd_impares+1

	
		
	


-- ERROR:
File "XXXX", line 4
    qdt_impares=
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:46:54) 
-- CODE:

from numpy import *
matriculas=array(eval(input("aa")))
qdt_impares=0
for i in matriculas:
	if(i %2 != 0):
		qdt_impares=qtd_impares+1

	
		
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:04:26) 
-- CODE:
from numpy import *
matriculas=array(eval(input("aa")))
qdt_impares=0
for i in matriculas:
	if(i %2 != 0):
		qdt_impares=qdt_impares+1
vetor_impares=zeros(qdt_impares, dtype=int)
j=0
for i in matriculas:
	if(i %2 != 0):
		vetor_impares[j]=
		
		
		
		
	


	
		
	


-- ERROR:
File "XXXX", line 11
    vetor_impares[j]=
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:05:08) 
-- CODE:
from numpy import *
matriculas=array(eval(input("aa")))
qdt_impares=0
for i in matriculas:
	if(i %2 != 0):
		qdt_impares=qdt_impares+1
vetor_impares=zeros(qdt_impares, dtype=int)
j=0
for elemento in matriculas:
	if(i %2 != 0):
		vetor_impares[j]=elemento
		j=j+1
print(vetor_impares)
		
		
		
		
	


	
		
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:05:29) 
-- CODE:
from numpy import *
matriculas=array(eval(input("aa")))
qdt_impares=0
for i in matriculas:
	if(i %2 != 0):
		qdt_impares=qdt_impares+1
vetor_impares=zeros(qdt_impares, dtype=int)
j=0
for elemento in matriculas:
	if(elemento %2 != 0):
		vetor_impares[j]=elemento
		j=j+1
print(vetor_impares)
		
		
		
		
	


	
		
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:06:47) 
-- CODE:
from numpy import *
matriculas=array(eval(input("aa")))
qdt_impares=0
for i in matriculas:
	if(i %2 != 0):
		qdt_impares=qdt_impares+1
vetor_impares=zeros(qdt_impares, dtype=int)
j=0
for elemento in matriculas:
	if(i %2 != 0):
		vetor_impares[j]=elemento
		j=j+1
print(vetor_impares)
		
		
		
		
	


	
		
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
